<resources>
    <string name="app_name">Login</string>
    <string name="user">Enter you username</string>
    <string name="passwd">Enter your password</string>
    <string name="rmutsv">  RMUTSV  </string>
    <string name="name">MR. IDROS   LOHMA-A</string>
    <string name="nickname">BEAR</string>
    <string name="birthday"> 8 NOVEMBER 1996</string>
    <string name="title">TUTORIAL</string>
    <string name="im1">Bodyslam</string>
    <string name="im2">Big ass</string>
    <string name="im3">Clash</string>
    <string name="im4">Ebola</string>
    <string name="im5">Kala</string>
    <string name="im6">Labanoon</string>
    <string name="im7">Nos</string>
    <string name="im8">Potato</string>
    <string name="im9">SDF</string>
    <string name="im10">Silly Fools</string>
    <string name="m1">บอดี้สแลม (Bodyslam) เป็นวงดนตรีร็อกสัญชาติไทย ก่อตั้งขึ้นในปี พ.ศ. 2545 เป็นวงดนตรีที่ได้รับความนิยมในประเทศไทย สมาชิกวงที่เป็นที่รู้จักกันดีจากวงนี้คือ นักร้องนำของวง อาทิวราห์ คงมาลัย (ตูน)</string>
    <string name="m2">บิ๊กแอส (Big Ass) เป็นวงดนตรีแนวร็อก สัญชาติไทย สังกัดค่ายจีนี่เรคอร์ดส มีเพลงดังได้แก่ "ทางผ่าน" "ก่อนตาย" "เล่นของสูง" "พรหมลิขิต" "ฝุ่น" "ลมเปลี่ยนทิศ" และเพลงอื่นๆอีกมายมาย</string>
    <string name="m3">แคลช (Clash) วงดนตรีร็อคหน้าใหม่และมีสไตล์เป็นของตัวเอง รวมตัวกันครั้งแรก ในชื่อวง LUCIFER เพื่อเข้าประกวด Hot Wave Music Awards ครั้งที่ 2 และ 3 ตั้งแต่สมัยเรียนมัธยมที่ราชวินิต บางแก้ว พร้อมคว้าหลายรางวัลจากการประกวด</string>
    <string name="m4">อีโบล่า (Ebola) อีโบล่าได้ก่อตั้งวงมาตั้งแต่ปี พ.ศ. 2539 โดยกลุ่มเพื่อนนักศึกษาจากมหาวิทยาลัยราชกัชธนบุรี  อีโบล่าเริ่มเป็นที่รู้จักมาจากเพลงใต้ดินจากการแสดงในคอนเสิร์ตใต้ดินหลายครั้งจนมีกลุ่มแฟนๆ</string>
    <string name="m5">กะลา (Kala) เป็นวงดนตรีแนวซอฟต์ร็อก จากจังหวัดสมุทรปราการ มีสมาชิกที่เป็นแกนหลักของวงได้แก่ หนุ่ม ยุทธพงษ์ แสงสุวรรณ นักร้องนำและหัวหน้าวงที่มีเสียงร้องเป็นเอกลักษณ์ โดยวงเป็นที่รู้จักจากการเข้าประกวดวงดนตรีมีธยม ฮอตเวฟมิวสิกอวอร์ดส์ ครั้งที่ 2 ประจำปี พ.ศ. 2540</string>
    <string name="m6">ลาบานูน (Labanoon) เป็นวงดนตรีของสามหนุ่มเชื้อสายไทยมุสลิมจาก อิสลามวิทยาลัยแห่งประเทศไทย (Islamic College of Thailand) เกิดจากการ เข้าร่วมประกวดในโครงการ "Hot Wave Music Awards" และ ผ่านเข้าไปในรอบ 10 วงสุดท้าย</string>
    <string name="m7">นอส (Nos) ออกอัลบั้มแรก Boost กับค่าย วี เรคคอร์ดส เป็นวงดนตรีแนวร็อก ตอนนี้สังกัดเนเวอร์มายด์ เรคคอร์ดและได้เข้าประกวดพานาโซนิคสตาร์ชาเลนซ์ ปี 2004 และวงได้รับรางวัลชนะเลิศภาคกลางมา แล้วในระดับประเทศได้รางวัลชมเชย และได้เซ็นสัญญาเป็นศิลปิน rs</string>
    <string name="m8">โปเตโต้ (Potato) หรือชื่อเดิม เดอะ โปเตโต้ เป็นวงดนตรีร็อกสัญชาติไทยสังกัดค่ายแกรมมี่ เป็นวงดนตรีที่ได้รับความนิยมสูงมากในหมู่วัยรุ่นไทยในปัจจุบัน มีผลงานเพลงออกมาหลายอัลบัม เคยยุบวงไปครั้งหนึ่งเมื่ออดีตนักร้องนำคือ ปีย์ชนิตถ์ อ้นอารี (ปีย์) ได้เสียชีวิต</string>
    <string name="m9">เอส.ดี.เอฟ (SDF) เป็นกลุ่มศิลปินไทยสังกัดแกรนด์มิวสิคในเครือแกรมมี่ ประกอบด้วยสมาชิกคือ แชมป์ - นิตินันท์ จันทรเดชา (ร้องนำ), แฮ็ค - ฐาปนา ณ บางช้าง (กีตาร์), ไท - จีรศักดิ์ ไฝสิงห์ (เบส) มีผลงานเพลงที่เป็นที่รู้จักจากเพลง "สุดฤทธิ์" เพลงประกอบละครเรื่อง รักสุดฤทธิ์ และ "เกิดมาเพื่อรักเธอ" เพลงประกอบละคร สามีตีตรา</string>
    <string name="m10">ซิลลี่ ฟูลส์ (Silly Fools) วงดนตรีสัญชาติไทย เป็นวงดนตรีที่ได้ประสบความสำเร็จมาแล้ววงหนึ่ง ซิลลี่ ฟูลส์ เป็นวงดนตรีที่มีเอกลักษณ์และมีฝีมือ ไม่ว่าจะเป็นการผสมผสานดนตรีอันลงตัว อันเป็นเอกลักษณ์เฉพาะตัว ซึ่งไม่มีใครลอกเลียนได้ และเป็นต้นแบบของวงเฮฟวี่เมทัลในยุคนี้ และเป็นไอดอลของนักดนตรีหลาย ๆ คน</string>
    <string name="nameapp">My Exchange Money</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="yan">YEN</string>
    <string name="exchange">EXCHANGE</string>
</resources>
